package A08_ARA0075_PPS_NA.aula07.decorator;

public interface Bebida {
    String getDescricao();
    double getPreco();
}
