package A08_ARA0075_PPS_NA.aula07.decorator;

public class Cafe implements Bebida {
    public String getDescricao() {
        return "Café";
    }

    public double getPreco() {
        return 3.0;
    }
}